--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Screensaver created GPT-4"
+      content="Screensaver created by GPT-4"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
